--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.1.14",
     "sass": "^1.51.0",
+    "vercel": "^28.16.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
