--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "body-parser": "^1.20.1",
+    "cogo-toast": "^4.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.17.1",
